cmake_minimum_required(VERSION 3.23)
project(Altu_Bitu_JungDaso)

set(CMAKE_CXX_STANDARD 17)

add_executable(Altu_Bitu_JungDaso
        #"09월 06일 - 맵과 셋/10867.cpp"
        #"09월 06일 - 맵과 셋/1620.cpp"
        #"09월 06일 - 맵과 셋/2002.cpp"
        #"09월 06일 - 맵과 셋/2910.cpp"
        #"09월 06일 - 맵과 셋/11723.cpp"
        #09월 06일 - 맵과 셋/10757.cpp"
        #"09월 06일 - 맵과 셋/7785.cpp"
        #"10월 04일 - 그리디 알고리즘/11047.cpp"
        #"10월 04일 - 그리디 알고리즘/1931.cpp"
        #"10월 04일 - 그리디 알고리즘/11399.cpp" "10월 04일 - 그리디 알고리즘/2503.cpp"
        "10월 04일 - 그리디 알고리즘/2503.cpp")
